# sp_orb_slam

./: .spslam_https.install  .travis.yml  README.md  install.sh
orb_ros/: .gitignore  CMakeLists.txt  package.xml
orb_ros/cfg/: euroc_mono.yaml  tsukuba.yaml
orb_ros/data/tsukuba/: gt.txt
orb_ros/launch/: euroc_mono.launch  tsukuba.launch
orb_ros/scripts/: evaluate_euroc_vo.sh  evaluate_tsukuba_vo.sh  evo_euroc.py  evo_tsukuba.py
orb_slam2/: .gitignore  CMakeLists.txt  package.xml
orb_slam2/include/orb_slam/: common.h  config.h  global.h  init_cfg.hpp  system.h
orb_slam2/include/orb_slam/cv/: base_extractor.h  base_matcher.h  depth_filter.h  netvlad.h  orb_extractor.h  orb_matcher.h  sp_extractor.h  sp_matcher.h
orb_slam2/include/orb_slam/io/: data_loader.h
orb_slam2/include/orb_slam/loopclosing/: loop_closer_vlad.h
orb_slam2/include/orb_slam/mapping/: local_mapper.h  optimizer.h  sim3_solver.h
orb_slam2/include/orb_slam/optimization/: types_dust_tracking.h
orb_slam2/include/orb_slam/tracking/: initializer.h  mono_tracker.h  tracker.h
orb_slam2/include/orb_slam/type/: frame.h  keyframe.h  map.h  mappoint.h  type.h
orb_slam2/include/orb_slam/utils/: converter.h  summary_writer.h  timing.h
orb_slam2/include/orb_slam/viz/: frame_drawer.h  map_drawer.h  viewer.h
orb_slam2/node/: mono_node.cc
orb_slam2/src/: config.cpp  global.cpp  system.cpp  system_helper.cpp
orb_slam2/src/cv/: base_extractor.cpp  depth_filter.cpp  netvlad.cpp  orb_extractor.cpp  sp_extractor.cpp  sp_matcher.cpp  sp_matcher_loop.cpp
orb_slam2/src/io/: data_loader.cc
orb_slam2/src/loopclosing/: loop_closer_vlad.cpp
orb_slam2/src/mapping/: local_mapper.cpp  local_mapper_raw.cpp  optimizer.cpp  optimizer_dust.cpp  sim3_solver.cpp
orb_slam2/src/optimization/: types_dust_tracking.cpp
orb_slam2/src/tracking/: initializer.cpp  mono_tracker.cpp  tracker.cpp  tracker_dust.cpp  tracker_raw.cpp
orb_slam2/src/type/: frame.cpp  keyframe.cpp  map.cpp  mappoint.cpp
orb_slam2/src/utils/: converter.cpp  timing.cpp
orb_slam2/src/viz/: frame_drawer.cpp  map_drawer.cpp  viewer.cpp
