<?xml version="1.0"?>
<package format="2">
  <name>orb_slam2</name>
  <version>0.0.0</version>
  <description>ORB_SLAM2 ros package</description>

  <maintainer email="hyhuang1995@gmail.com">hyhuang</maintainer>

  <license>GPL-v3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>g2o_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>gflags_catkin</depend>
  <depend>eigen_catkin</depend>

  <depend>roscpp</depend>
</package>
